tests/ui/traits/normalize/normalize-param-env-missing-implied-bound-1.current.stderr
error[E0477]: the type `&'a ()` does not fulfill the required lifetime
  --> $DIR/normalize-param-env-missing-implied-bound-1.rs:38:1
   |
LL | fn hrtb<T: for<'a> Trait<&'a ()>>() {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: type must satisfy the static lifetime

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0477`.
